Task4. Attempts to create Comparator part of the task.